Add prices for AGFS scheme 10
Includes new fee types and advocate type.

--- a/fee_calculator/apps/calculator/fixtures/advocatetype.yaml
+++ b/fee_calculator/apps/calculator/fixtures/advocatetype.yaml
@@ -10,3 +10,6 @@
 - model: calculator.advocatetype
   pk: QC
   fields: {name: QC}
+- model: calculator.advocatetype
+  pk: JUNIOR
+  fields: {name: Junior}
