--- a/buildspec.yml
+++ b/buildspec.yml
@@ -43,7 +43,7 @@ phases:
       - "sleep 60"
       - "PODS=$(kubectl get pods --selector='app=laa-fee-dev-app'  --namespace=laa-fee-calculator-dev -o name  | sed 's%pods/%%' | sed 's%pod/%%')"
       - "echo $PODS"
-      - "echo $PODS | while read POD; do kubectl exec -n laa-fee-calculator-dev $POD -- /bin/bash -c 'apt-get install -y libpq-dev python-pip; pip install -r requirements.txt; /usr/bin/python manage.py loaddata advocatetype feetype offenceclass price scenario scheme unit modifier modifiertype scenariocode'; done"
+      - "echo $PODS | while read POD; do kubectl exec -n laa-fee-calculator-dev $POD -- /bin/bash -c 'apt-get install -y libpq-dev python-pip; pip install -r requirements.txt; /usr/bin/python manage.py loadalldata'; done"
 
 artifacts:
   files:
