--- a/kubernetes_deploy/laa-fee-calc-dev-app_deployment.yaml
+++ b/kubernetes_deploy/laa-fee-calc-dev-app_deployment.yaml
@@ -38,6 +38,6 @@ spec:
 #               command:
 #                 - "apt-get install -y python-pip"
 #                 - "pip install -r requirements.txt"
-#                 - "python manage.py loaddata advocatetype feetype offenceclass price scenario scheme unit modifier modifiertype scenariocode"
+#                 - "python manage.py loadalldata"
 #
-#              command: ["/usr/bin/python", "manage.py", "loaddata", "advocatetype", "feetype", "offenceclass", "price", "scenario", "scheme", "unit", "modifier", "modifiertype", "scenariocode"]
+#              command: ["/usr/bin/python", "manage.py", "loadalldata"]
