--- a/fee_calculator/apps/calculator/fixtures/scenariocode.yaml
+++ b/fee_calculator/apps/calculator/fixtures/scenariocode.yaml
@@ -1,162 +1,162 @@
 - model: calculator.scenariocode
   pk: 201
-  fields: {scenario: 46, supplier_type: 2, code: ST1TS3T0}
+  fields: {scenario: 46, scheme_type: 2, code: ST1TS3T0}
 - model: calculator.scenariocode
   pk: 202
-  fields: {scenario: 1, supplier_type: 2, code: ST1TS0T1}
+  fields: {scenario: 1, scheme_type: 2, code: ST1TS0T1}
 - model: calculator.scenariocode
   pk: 203
-  fields: {scenario: 1, supplier_type: 1, code: AS000001}
+  fields: {scenario: 1, scheme_type: 1, code: AS000001}
 - model: calculator.scenariocode
   pk: 204
-  fields: {scenario: 2, supplier_type: 2, code: ST1TS0T2}
+  fields: {scenario: 2, scheme_type: 2, code: ST1TS0T2}
 - model: calculator.scenariocode
   pk: 205
-  fields: {scenario: 2, supplier_type: 1, code: AS000002}
+  fields: {scenario: 2, scheme_type: 1, code: AS000002}
 - model: calculator.scenariocode
   pk: 206
-  fields: {scenario: 3, supplier_type: 2, code: ST1TS0T3}
+  fields: {scenario: 3, scheme_type: 2, code: ST1TS0T3}
 - model: calculator.scenariocode
   pk: 207
-  fields: {scenario: 3, supplier_type: 1, code: AS000003}
+  fields: {scenario: 3, scheme_type: 1, code: AS000003}
 - model: calculator.scenariocode
   pk: 208
-  fields: {scenario: 4, supplier_type: 2, code: ST1TS0T4}
+  fields: {scenario: 4, scheme_type: 2, code: ST1TS0T4}
 - model: calculator.scenariocode
   pk: 209
-  fields: {scenario: 4, supplier_type: 1, code: AS000004}
+  fields: {scenario: 4, scheme_type: 1, code: AS000004}
 - model: calculator.scenariocode
   pk: 210
-  fields: {scenario: 5, supplier_type: 2, code: ST1TS0T5}
+  fields: {scenario: 5, scheme_type: 2, code: ST1TS0T5}
 - model: calculator.scenariocode
   pk: 211
-  fields: {scenario: 5, supplier_type: 1, code: AS000005}
+  fields: {scenario: 5, scheme_type: 1, code: AS000005}
 - model: calculator.scenariocode
   pk: 212
-  fields: {scenario: 6, supplier_type: 2, code: ST1TS0T6}
+  fields: {scenario: 6, scheme_type: 2, code: ST1TS0T6}
 - model: calculator.scenariocode
   pk: 213
-  fields: {scenario: 6, supplier_type: 1, code: AS000006}
+  fields: {scenario: 6, scheme_type: 1, code: AS000006}
 - model: calculator.scenariocode
   pk: 214
-  fields: {scenario: 7, supplier_type: 2, code: ST1TS0T7}
+  fields: {scenario: 7, scheme_type: 2, code: ST1TS0T7}
 - model: calculator.scenariocode
   pk: 215
-  fields: {scenario: 7, supplier_type: 1, code: AS000007}
+  fields: {scenario: 7, scheme_type: 1, code: AS000007}
 - model: calculator.scenariocode
   pk: 216
-  fields: {scenario: 8, supplier_type: 2, code: ST1TS0T8}
+  fields: {scenario: 8, scheme_type: 2, code: ST1TS0T8}
 - model: calculator.scenariocode
   pk: 217
-  fields: {scenario: 8, supplier_type: 1, code: AS000008}
+  fields: {scenario: 8, scheme_type: 1, code: AS000008}
 - model: calculator.scenariocode
   pk: 218
-  fields: {scenario: 9, supplier_type: 2, code: ST3TS3TB}
+  fields: {scenario: 9, scheme_type: 2, code: ST3TS3TB}
 - model: calculator.scenariocode
   pk: 219
-  fields: {scenario: 9, supplier_type: 1, code: AS000009}
+  fields: {scenario: 9, scheme_type: 1, code: AS000009}
 - model: calculator.scenariocode
   pk: 220
-  fields: {scenario: 10, supplier_type: 2, code: ST1TS0T9}
+  fields: {scenario: 10, scheme_type: 2, code: ST1TS0T9}
 - model: calculator.scenariocode
   pk: 221
-  fields: {scenario: 10, supplier_type: 1, code: AS000010}
+  fields: {scenario: 10, scheme_type: 1, code: AS000010}
 - model: calculator.scenariocode
   pk: 222
-  fields: {scenario: 11, supplier_type: 2, code: ST1TS0TA}
+  fields: {scenario: 11, scheme_type: 2, code: ST1TS0TA}
 - model: calculator.scenariocode
   pk: 223
-  fields: {scenario: 11, supplier_type: 1, code: AS000011}
+  fields: {scenario: 11, scheme_type: 1, code: AS000011}
 - model: calculator.scenariocode
   pk: 224
-  fields: {scenario: 12, supplier_type: 2, code: ST4TS0T1}
+  fields: {scenario: 12, scheme_type: 2, code: ST4TS0T1}
 - model: calculator.scenariocode
   pk: 225
-  fields: {scenario: 12, supplier_type: 1, code: AS000014}
+  fields: {scenario: 12, scheme_type: 1, code: AS000014}
 - model: calculator.scenariocode
   pk: 226
-  fields: {scenario: 17, supplier_type: 2, code: ST2TS1T0}
+  fields: {scenario: 17, scheme_type: 2, code: ST2TS1T0}
 - model: calculator.scenariocode
   pk: 227
-  fields: {scenario: 18, supplier_type: 2, code: ST3TS1T2}
+  fields: {scenario: 18, scheme_type: 2, code: ST3TS1T2}
 - model: calculator.scenariocode
   pk: 228
-  fields: {scenario: 19, supplier_type: 2, code: ST3TS1T3}
+  fields: {scenario: 19, scheme_type: 2, code: ST3TS1T3}
 - model: calculator.scenariocode
   pk: 229
-  fields: {scenario: 20, supplier_type: 2, code: ST3TS1T4}
+  fields: {scenario: 20, scheme_type: 2, code: ST3TS1T4}
 - model: calculator.scenariocode
   pk: 230
-  fields: {scenario: 21, supplier_type: 2, code: ST2TS2T0}
+  fields: {scenario: 21, scheme_type: 2, code: ST2TS2T0}
 - model: calculator.scenariocode
   pk: 231
-  fields: {scenario: 22, supplier_type: 2, code: ST3TS2T3}
+  fields: {scenario: 22, scheme_type: 2, code: ST3TS2T3}
 - model: calculator.scenariocode
   pk: 232
-  fields: {scenario: 23, supplier_type: 2, code: ST3TS2T4}
+  fields: {scenario: 23, scheme_type: 2, code: ST3TS2T4}
 - model: calculator.scenariocode
   pk: 233
-  fields: {scenario: 24, supplier_type: 2, code: ST2TS3T0}
+  fields: {scenario: 24, scheme_type: 2, code: ST2TS3T0}
 - model: calculator.scenariocode
   pk: 234
-  fields: {scenario: 25, supplier_type: 2, code: ST3TS3T4}
+  fields: {scenario: 25, scheme_type: 2, code: ST3TS3T4}
 - model: calculator.scenariocode
   pk: 235
-  fields: {scenario: 26, supplier_type: 2, code: ST3TS3TA}
+  fields: {scenario: 26, scheme_type: 2, code: ST3TS3TA}
 - model: calculator.scenariocode
   pk: 236
-  fields: {scenario: 27, supplier_type: 2, code: ST2TS4T0}
+  fields: {scenario: 27, scheme_type: 2, code: ST2TS4T0}
 - model: calculator.scenariocode
   pk: 237
-  fields: {scenario: 28, supplier_type: 2, code: ST3TS4T9}
+  fields: {scenario: 28, scheme_type: 2, code: ST3TS4T9}
 - model: calculator.scenariocode
   pk: 238
-  fields: {scenario: 29, supplier_type: 2, code: ST3TS4TA}
+  fields: {scenario: 29, scheme_type: 2, code: ST3TS4TA}
 - model: calculator.scenariocode
   pk: 239
-  fields: {scenario: 30, supplier_type: 2, code: ST2TS5T0}
+  fields: {scenario: 30, scheme_type: 2, code: ST2TS5T0}
 - model: calculator.scenariocode
   pk: 240
-  fields: {scenario: 31, supplier_type: 2, code: ST3TS5TA}
+  fields: {scenario: 31, scheme_type: 2, code: ST3TS5TA}
 - model: calculator.scenariocode
   pk: 241
-  fields: {scenario: 32, supplier_type: 2, code: ST1TS0TC}
+  fields: {scenario: 32, scheme_type: 2, code: ST1TS0TC}
 - model: calculator.scenariocode
   pk: 242
-  fields: {scenario: 33, supplier_type: 2, code: ST2TS6TA}
+  fields: {scenario: 33, scheme_type: 2, code: ST2TS6TA}
 - model: calculator.scenariocode
   pk: 243
-  fields: {scenario: 34, supplier_type: 2, code: ST3TS6TA}
+  fields: {scenario: 34, scheme_type: 2, code: ST3TS6TA}
 - model: calculator.scenariocode
   pk: 244
-  fields: {scenario: 35, supplier_type: 2, code: ST2TS7T4}
+  fields: {scenario: 35, scheme_type: 2, code: ST2TS7T4}
 - model: calculator.scenariocode
   pk: 245
-  fields: {scenario: 36, supplier_type: 2, code: ST3TS7T4}
+  fields: {scenario: 36, scheme_type: 2, code: ST3TS7T4}
 - model: calculator.scenariocode
   pk: 246
-  fields: {scenario: 37, supplier_type: 2, code: ST4TS0T2}
+  fields: {scenario: 37, scheme_type: 2, code: ST4TS0T2}
 - model: calculator.scenariocode
   pk: 247
-  fields: {scenario: 38, supplier_type: 2, code: ST4TS0T3}
+  fields: {scenario: 38, scheme_type: 2, code: ST4TS0T3}
 - model: calculator.scenariocode
   pk: 248
-  fields: {scenario: 39, supplier_type: 2, code: ST4TS0T4}
+  fields: {scenario: 39, scheme_type: 2, code: ST4TS0T4}
 - model: calculator.scenariocode
   pk: 249
-  fields: {scenario: 40, supplier_type: 2, code: ST4TS0T5}
+  fields: {scenario: 40, scheme_type: 2, code: ST4TS0T5}
 - model: calculator.scenariocode
   pk: 250
-  fields: {scenario: 41, supplier_type: 2, code: ST4TS0T6}
+  fields: {scenario: 41, scheme_type: 2, code: ST4TS0T6}
 - model: calculator.scenariocode
   pk: 251
-  fields: {scenario: 42, supplier_type: 2, code: ST4TS0T7}
+  fields: {scenario: 42, scheme_type: 2, code: ST4TS0T7}
 - model: calculator.scenariocode
   pk: 252
-  fields: {scenario: 43, supplier_type: 2, code: ST1TS0T0}
+  fields: {scenario: 43, scheme_type: 2, code: ST1TS0T0}
 - model: calculator.scenariocode
   pk: 253
-  fields: {scenario: 44, supplier_type: 2, code: ST1TS1T0}
+  fields: {scenario: 44, scheme_type: 2, code: ST1TS1T0}
 - model: calculator.scenariocode
   pk: 254
-  fields: {scenario: 45, supplier_type: 2, code: ST1TS2T0}
+  fields: {scenario: 45, scheme_type: 2, code: ST1TS2T0}
