--- a/kubernetes_deploy/ingress.yaml
+++ b/kubernetes_deploy/ingress.yaml
@@ -2,12 +2,11 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: laa-fee-calculator
-  namespace: laa-fee-calculator-staging
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-  - host: laa-fee-calculator-staging.apps.cloud-platform-live-0.k8s.integration.dsd.io
+  - host: laa-fee-calculator.apps.cloud-platform-live-0.k8s.integration.dsd.io
     http:
       paths:
       - path: /
