--- a/kubernetes_deploy/production/ingress.yaml
+++ b/kubernetes_deploy/production/ingress.yaml
@@ -2,11 +2,12 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: laa-fee-calculator
+  namespace: laa-fee-calculator-production
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-  - host: laa-fee-calculator.apps.cloud-platform-live-0.k8s.integration.dsd.io
+  - host: laa-fee-calculator-production.apps.cloud-platform-live-0.k8s.integration.dsd.io
     http:
       paths:
       - path: /
