--- a/kubernetes_deploy/production/service.yaml
+++ b/kubernetes_deploy/production/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: laa-fee-calculator
+  namespace: laa-fee-calculator-production
 spec:
   ports:
   - port: 8080
