--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,14 @@ references:
   build_docker_image: &build_docker_image
     run:
       name: Build laa-fee-calculator docker image
-      command: docker build --build-arg DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY} --build-arg VERSION_NUMBER=${CIRCLE_BUILD_NUM} --build-arg COMMIT_ID=${CIRCLE_SHA1} --build-arg BUILD_DATE=${BUILD_DATE} --build-arg BUILD_TAG=${CIRCLE_BRANCH} -t app .
+      command: |
+        docker build \
+          --build-arg DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY} \
+          --build-arg VERSION_NUMBER=${CIRCLE_BUILD_NUM} \
+          --build-arg COMMIT_ID=${CIRCLE_SHA1} \
+          --build-arg BUILD_DATE=${BUILD_DATE} \
+          --build-arg BUILD_TAG=${CIRCLE_BRANCH} \
+          -t app .
 
   push_docker_image: &push_docker_image
     run:
